# coremio

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/core/: array.h  assert.h  dictionary.h  json.h  list.h  local.string.h  memory.h  red_black_tree.h  result.h  tokens.h
include/coremio/: array.h  assert.h  boxed_nan.h  coremio.h  dictionary.h  json.h  lisp.h  list.h  local.string.h  memory.h  nisp.h  nisp_standard_library.h  red_black_tree.h  result.h  tokens.h
include/coremio/neural_networks/: feedforward_neural_network.h  recurrent_neural_network.h
src/: array.c  assert.c  boxed_nan.c  dictionary.c  json.c  lisp.c  list.c  local.string.c  memory.c  nisp.c  nisp_standard_library.c  red_black_tree.c  result.c  tokens.c
src/neural_networks/: feedforward_neural_network.c  recurrent_neural_network.c
unit_test/: main.c
